use 'lng' instead of 'long'
